Bug 103758 - OpenGL rendering RGB reduced to only a single band in slide transitions and thumbnail views, JPEG images are being inverted
Summary: OpenGL rendering RGB reduced to only a single band in slide transitions and ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2016-11-07 12:54 UTC by V Stuart Foote
Modified: 2016-11-10 03:54 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2016-11-07 12:54:26 UTC
Description:
When OpenGL Rendering is enabled, the OpenGL 3D transitions flash from RGB to a single color band just in RED and animates that layer.  We had a similar OpenGL only glitch with bug 92184--but that was as blue layers.

Possibly related, the thumbnail view previews saved to Start Center are of the same RED band of the BMP.

Happens with OpenGL rendering is enabled with the new HarfBuzz and the old DrirectWrite only rendering.  It does not happen when default GDI+ rendering is enabled--with either text layout. 

On Windows 10 Pro 64-bit (1607) en-US with
Version: 5.3.0.0.alpha1+
Build ID: cea3b8762bfb7f0da19bab8a3d468bcbf987eb0f
CPU Threads: 8; OS Version: Windows 6.19; UI Render: GL; Layout Engine: new & old 
TinderBox: Win-x86@39, Branch:master, Time: 2016-11-06_19:55:54
Locale: en-US (en_US); Calc: CL

OK 36bafd3d4ad7fa75649eeab0c9cd1b3d6f53d8e8 (2016-10-21_18:49:50) c55cc87280d50d8b64d3b7e4a335dae7984d89cc (2016-10-28)
 0a4e0dfffd2038c5bcaef0bc20884e60dfc2080a (2016-10-30_00:16:37) 4b4abb73fcd7f2802e73102b3e7c30face8d309c (2016-10-31_02:54:50) 33090865c494618f4e528bf5a10aae8c4fc443d1 (2016-10-31_22:55:53) **glm issue 5d39c2013374727b1c8f147b8b99d54402a7ff02 (2016-11-02_01:01:09) ** c8be45889217c555e4bec92af838d0524ceba4e0 (2016-11-02_23:27:06) ** a6ce5d391476e4b6a2cb2d92ff45548c1d75684b (2016-11-04_00:03:22) **

Bad 32bdc5097013e7efd9c85e1b8df697880e66e925 (2016-11-04_23:30:30) ** cea3b8762bfb7f0da19bab8a3d468bcbf987eb0f (2016-11-06_19:55:54) **glm resolved


Steps to Reproduce:
1. Enable OpenGL rendering
2. open Impress to a sample slide with PNG or JPEG image
3. apply a 3D transition
4. close Impress thumbnail created and saved to Start Center

Actual Results:  
1. image in slide is inverted
2. when running transition slices show in single color band
3. on closing the presentation, thumbnail view is generated using single color band

Expected Results:
1. canvas of slide would not invert image
2. color would not shift to single band


Reproducible: Always

User Profile Reset: No

Additional Info:
Bibisect from builds on hand...

OK 36bafd3d4ad7fa75649eeab0c9cd1b3d6f53d8e8 (2016-10-21_18:49:50) c55cc87280d50d8b64d3b7e4a335dae7984d89cc (2016-10-28) 0a4e0dfffd2038c5bcaef0bc20884e60dfc2080a (2016-10-30_00:16:37) 4b4abb73fcd7f2802e73102b3e7c30face8d309c (2016-10-31_02:54:50) 33090865c494618f4e528bf5a10aae8c4fc443d1 (2016-10-31_22:55:53) **glm issue 5d39c2013374727b1c8f147b8b99d54402a7ff02 (2016-11-02_01:01:09) ** c8be45889217c555e4bec92af838d0524ceba4e0 (2016-11-02_23:27:06) ** a6ce5d391476e4b6a2cb2d92ff45548c1d75684b (2016-11-04_00:03:22) **

Bad 32bdc5097013e7efd9c85e1b8df697880e66e925 (2016-11-04_23:30:30) ** cea3b8762bfb7f0da19bab8a3d468bcbf987eb0f (2016-11-06_19:55:54) **glm resolved


https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a6ce5d391476e4b6a2cb2d92ff45548c1d75684b..32bdc5097013e7efd9c85e1b8df697880e66e925

This looks a bit suspect...
https://cgit.freedesktop.org/libreoffice/core/commit/?id=6b571ae4608ac15256eb7582f442ce69975370f3


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:49.0) Gecko/20100101 Firefox/49.0
Comment 1 V Stuart Foote 2016-11-07 13:24:11 UTC
Unable to check Linux builds just now, but this is probably Windows only.
Comment 2 David Tardon 2016-11-07 13:59:39 UTC
Nope, I see it on Linux...
Comment 3 V Stuart Foote 2016-11-07 14:47:22 UTC
Yep, on Centos RHEL 7.2 Linux also with
Version: 5.3.0.0.alpha1+
Build ID: 11cab8aba359c655a75791ddbc0f2ffeae8ce206
CPU Threads: 2; OS Version: Linux 3.10; UI Render: GL; VCL: gtk2; Layout Engine: new; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-11-06_23:07:09
Locale: en-US (en_US.UTF-8); Calc: group

Also, all JPEG being inserted to canvas are being inverted (Impress, Draw and Writer) PNG images are not. Same on Windows and Linux (GTK2) with OpenGL enabled.
Comment 4 David Tardon 2016-11-07 15:20:25 UTC
Yup, it's a regression since https://cgit.freedesktop.org/libreoffice/core/commit/?id=6b571ae4608ac15256eb7582f442ce69975370f3 .
Comment 5 Xisco Faulí 2016-11-07 17:00:32 UTC
Adding CC: to Tomaž Vajngerl
Comment 6 Commit Notification 2016-11-09 11:31:06 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ed42212f53b2e52238346e64dae31a931d6c90a1

tdf#103758 wrong GL format for RGBA image buffers

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 V Stuart Foote 2016-11-10 03:54:21 UTC
Its fixed... thanks Tomaž!

On Windows 10 Pro 64-bit (1607) en-US with
Version: 5.3.0.0.alpha1+
Build ID: f6391d9696bfa7485bf785ac81edef4d5441e232
CPU Threads: 8; OS Version: Windows 6.2; UI Render: GL; Layout Engine: new; 
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2016-11-10_00:11:47
Locale: en-US (en_US); Calc: CL