tdf#103758 wrong GL format for RGBA image buffers

Change-Id: I8a36234068ce0818b7baaa3b6c68d789753db6de